--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "4.0",
     "mongoose": "^8.5.2",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.0"
   }
 }
