--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 JWT_SECRET=your_super_secret_key
 JWT_EXPIRES_IN=24h
 
-EMAIL_USER=tallavie1@gmail.com
-EMAIL_PASS=yhvcoavblsblsvnv
+EMAIL_USER=itay068@gmail.com
+EMAIL_PASS=uqljqiimctarerec
